## Fixed: Inbound Messages Looping Through Outbound Retry Pipeline
- `findMessagesForRetry()` now filters `direction = 'OUTBOUND'` — inbound FAILED messages can no longer be picked up as outbound retry candidates (stops the infinite loop)
- `retryFailedMessages()` now reconstructs the full `EbxmlMessageHeader` from the persisted entity before republishing — previously outbound retries were silently broken too (missing header)
- Watchdog now uses a separate, longer threshold for INBOUND (30 min) vs OUTBOUND (5 min), since inbound messages can legitimately wait longer for a downstream consumer that doesn't exist yet on `ebms.inbound.messages`

**Testing**: 28/28 non-Docker unit tests pass (4 new header-reconstruction tests, 3 rewritten watchdog tests, all regressions re-verified), 0 critical issues. Testcontainers tests still can't run in this sandbox (pre-existing Docker limitation) but compile cleanly.

Your outbound test script bug (wrong RabbitMQ exchange/routing key) is on your side to fix, as agreed.

- Next Action Items:
  - **Inbound Consumer**: Build a `@RabbitListener` for `ebms.inbound.messages` (e.g. as part of the planned auditor-service) so inbound messages actually reach a terminal DELIVERED/RECEIVED state instead of relying on the watchdog
  - **CI Docker Tests**: Run the 2 new Testcontainers regression tests (inbound-never-retried) in CI against real Postgres+RabbitMQ
  - **Retry Dashboard Signal**: Show retry count and last error reason per message in the admin dashboard so loops like this are visible without tailing logs
  - **Helm Keystore Fix**: Still pending from earlier — replace the empty PVC with a Secret volume for keystores